# cmake-protobuf

./: .gitignore  CMakeLists.txt  README.md  build-pb.sh  build.sh
.github/workflows/: build-protobuf.yml
src/http-test/: CMakeLists.txt  main.cpp
src/http-test/protobuf/cpp/: api.pb.cc  api.pb.h  test.pb.cc  test.pb.h
src/http-test/protobuf/proto/: api.proto  test.proto
